Adjust size to 800x600 to ensure playability on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #score {
-  width: 1000px;
-  height: 750px;
-  line-height: 750px;
+  width: 800px;
+  height: 600px;
+  line-height: 600px;
   text-align: center;
   font-size: 2em;
   border: 1px solid;
